--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -93,16 +93,18 @@ Assignment 2:
 
 Objectives:
 
- * Describe the purpose and compute the following measures of central tendency: mean, median and mode
- * Describe and summarize quantitative data that are continuous
-    + Includes computing the following measures of variability: quartiles, percentiles, inter-quartile range, range, variance and standard deviation
-    + Additionally describe conceptually principles of skewness and kurtosis
- * Create visualizations of quantitative data that are continuous
-    + Includes constructing stem-and-leaf, box- and violin-plots
- * Describe special features of a normal distribution
- * Describe distribution of repeated sample statistics drawn from a population and how this is informative to hypothesis testing
- * Apply CLT to understand whether mean value of a variable is different than a defined population value (when provided the SD of the variable)
-   + Includes conducting single-sample t-test
+- Describe and summarize quantitative data that are continuous
+- Describe the purpose and compute the following measures of central tendency: mean, median and mode
+- Descripe the purpose and compute the following measures of variability: quartiles, inter-quartile range, range, variance and standard deviation
+  + Describe conceptually the principles of skewness and kurtosis
+- Create visualizations of quantitative data that are continuous using R
+  + Includes constructing histograms, densities, stem-and-leaf, and box-and-whisker plots
+- Describe special features of a normal distribution
+- Describe the distribution of repeated sample statistics drawn from a population, how this relates to the Central Limit Theorem (CLT) and how this is informative to statistical hypothesis testing
+- Determine whether the mean value of a sample is different than a defined population value (when provided the *SD* of the variable, aka $Z$-test)
+- Conduct one-sample $t$-tests
+
+
 
 Readings: 
 
