--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -42,7 +42,7 @@ Deadline: TBD
 
 Download: [html file](./assignments/assignment01.html); [cat.csv dataset](./data/cat.csv)
 
-Key: [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R)
+Key: [doc file]; [R script]
 
 ## 3.2. Assignment 2 
 
@@ -64,7 +64,7 @@ Deadline: TBD
 
 Download: [html file](./assignments/assignment02.html); [cat.csv dataset](./data/cat.csv)
 
-Key: [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R)
+Key: [doc file]; [R script]
 
 ## 3.3. Assignment 3 
 
@@ -80,7 +80,7 @@ Deadline: TBD
 
 Download: [html file](./assignments/assignment03.html); [cont.csv dataset](./data/cont.csv)
 
-Key: [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R)
+Key: [doc file]; [R script]
 
 ## 3.4. Assignment 4 
 
@@ -90,7 +90,7 @@ Deadline: TBD
 
 Download: [html file](./assignments/assignment04.html); [cont.csv dataset](./data/cont.csv)
 
-Key: [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R)
+Key: [doc file]; [R script]
 
 
 ## 3.5. Final
@@ -101,7 +101,7 @@ Deadline: TBD
 
 Download: [html file](./assignments/assignment05.html); [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv)
 
-Key: [doc file](./assignments/keys/assignment05_key.docx); [R script](./assignments/keys/assignment05_key.R)
+Key: [doc file]; [R script]
 
 
 
