--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "EDUC 641: Applied Statistics in Education and the Human Services"
+title: "EDUC 641: Applied Statistics in Education and Human Services"
 subtitle: "College of Education, University of Oregon"
 author: "David D. Liebowitz"
 
