--- a/slides/EDUC641_1_intro.Rmd
+++ b/slides/EDUC641_1_intro.Rmd
@@ -229,5 +229,5 @@ class: middle, inverse
 - Clayton (2020)
 
 ### Assignment:
-- Download and familiarize yourself with R/RStudio interface
+- Have downloaded R/RStudio and familiarized yourself with the RStudio environment (Modules 1 & 2 from R Bootcamp)
 
